--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@ body,
   height: 100%;
 }
 
+img {
+  pointer-events: none;
+  content: normal !important
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
