--- a/src/pages/WaterChart/style.scss
+++ b/src/pages/WaterChart/style.scss
@@ -26,7 +26,7 @@
 
     .label-item {
       display: flex;
-      // align-items: flex-end;
+      align-items: center;
       margin-top: 8px;
 
       .pre-icon {
@@ -46,12 +46,19 @@
         color: rgba(255, 255, 255, 0.5);
       }
 
+      .label-content-extra {
+        margin-top: 4px;
+      }
+
       .sur-content-extra {
         width: 450px;
+        margin-top: 4px;
       }
     }
 
     .label-extra {
+      display: flex;
+      align-items: unset;
       margin: 22px 0 14px 0;
     }
 
