添加copyright、水浸添加两条预警线、修改document title

--- a/src/pages/Dashboard/style.scss
+++ b/src/pages/Dashboard/style.scss
@@ -44,7 +44,7 @@
   .equipment-info {
     margin-top: 50px;
     font-size: 24px;
-    color: #2AA7D3;
+    color: rgba(42, 167, 211, 0.6);
     text-align: center;
   }
 }
